# FFPlayer

./: README.md
app/: build.gradle
app/src/androidTest/java/com/xcp/ffplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  FFPlayer.cpp  FFPlayer.h  JNICallbakcHelper.cpp  JNICallbakcHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  util.h
app/src/main/java/com/xcp/ffplayer/: Constants.java  FFPlayer.java  MainActivity.java  PlayerListener.java  PrepareListener.java  Util.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/xcp/ffplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
